test fix for padding not respected on mobile for companyLabel

--- a/public/stylesheets/_styles.css
+++ b/public/stylesheets/_styles.css
@@ -725,6 +725,7 @@ input[type=email]:focus {
 @media (max-width: 1000px) {
   .companyLabel {
     margin-inline-start: 20px;
+    margin-inline-end: 10px;
   }
   #navbarWrapper{
     height: 3rem;
@@ -857,7 +858,7 @@ input[type=email]:focus {
   .footerGrid {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     padding: 0.3rem 0.5rem;
   }
 
